[package]
name = "derrrb-temper"
version = "0.1.0"
authors = ["Antonio Hickey <antoniohickey99@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "derrrb-temper"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
#mlx9061x = { git = "https://github.com/antonio-hickey/mlx9061x-rs.git" }
ufmt_float = "0.2.0"
smbus-pec = "1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.5.1"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
